--- a/draft/references.bib
+++ b/draft/references.bib
@@ -1,8 +1,37 @@
+@article{Boozer_PP99,
+author = {A.H. Boozer},
+title = {{Perturbed plasma equilibria}},
+journal = {Physics of Plasma},
+volume = {6},
+year = {1999}
+}
+
+@inproceedings{Elliott10,
+author = {G. Elliott and J. Anderson},
+title = {{Real-Time Multiprocessor Systems with GPUs}},
+booktitle = {Proceedings of the International Confrence on Real-Time and Network Systems},
+year = {2010}
+}
+
+@inproceedings{Hirabayashi_REACTION12,
+author = {M. Hirabayashi and S. Kato and M. Edahiro and Y. Sugiyama},
+title = {{Toward GPU-accelerated traffic simulation and its real-time challenge}},
+booktitle = {Proc. of the International Workshop on Real-Time and Distributed Computing in Emerging Applications},
+year = {2012 (to appear)}
+} 
+
 @inproceedings{Kato_ATC11,
 author = {S. Kato and K. Lakshmanan and R. Rajkumar and Y. Ishikawa},
 title = {{TimeGraph: GPU Scheduling for Real-Time Multi-Tasking Environments}},
 booktitle = {Proceedings of the USENIX Annual Technical Conference},
 year = {2011}
+}
+
+@inproceedings{Kato_ATC12,
+author = {S. Kato and M. McThrow and C. Maltzahn and S. Brandt},
+title = {{Gdev: First-Class GPU Resource Management in the Operating System}},
+booktitle = {Proc. of the USENIX Annual Technical Conference},
+year = {2012},
 }
 
 @inproceedings{Kato_RTAS11,
@@ -28,6 +57,52 @@ booktitle = {Proceedings of the IEEE Real-Time Systems Symposium},
 year = {2012}
 }
 
+@inproceedings{Liu_PACT12,
+author = {C. Liu and J. Li and W. Huang and J. Rubio and E. Speight and X. Lin},
+title = {{Power-Efficient Time-Sensitive Mapping in Heterogeneous Systems}},
+booktitle = {Proc. of the International Conference on Parallel Architectures and Compilation Techniques},
+year = {2012}
+} 
+
+@inproceedings{Mangharam11,
+author = {R. Mangharam and A. Saba},
+title = {{Anytime Algorithms for GPU Architectures}},
+booktitle = {Proc. of the IEEE Real-Time Systems Symposium},
+pages = {47--56},
+year = {2011}
+}
+
+@article{Maurer_PPCF11,
+author = {D.A. Maurer and J. Bialek and P.J. Byrne and B. De Bono and J.P. Levesque and B.Q. Li, et al.},
+title = {{The high beta tokamak-extended pulse magnetohydrodynamic mode control research program}},
+journal = {Plasma Physics and Controlled Fusion},
+volume = {53},
+year = {2011}
+}
+
+@inproceedings{McNaughton_ICRA11,
+author = {M. McNaughton and C. Urmson and J. Dolan and J-W. Lee},
+title = {{Motion Planning for Autonomous Driving with a Conformal Spatiotemporal Lattice}},
+booktitle = {Proc. of the IEE International Conference on Robotics and Automation},
+pages = {4889--4895},
+year = {2011}
+}
+
+@inproceedings{Michel_IROS07,
+author = {P. Michel and J. Chestnutt and S. Kagami and K. Nishiwaki and J. Kuffner and T. Kanade},
+title = {{GPU-accelerated Real-Time 3D Tracking for Humanoid Locomotion and Stair Climbing}},
+booktitle = {Proc. of the IEEE/RSJ International Conference on Intelligent Robots and Systems},
+pages = {463--469},
+year = {2007}
+}
+
+@article{Rath_FED12,
+author = {N. Rath and J. Bialek and P.J. Byrne and B. DeBono and J.P. Levesque and B. Li and M.E. Mauel and D.A. Maurer and G.A. Navratil and D. Shiraki},
+title = {{High-speed, multi-input, multi-output control using GPU processing in the HBT-EP tokamak}},
+journal = {Fusion Engineering and Design},
+year = {2012}
+}
+
 @inproceedings{Rossbach_SOSP11,
 author = {C. Rossbach and J. Currey and M. Silberstein and B. Ray and E. Witchel},
 title = {{PTask: Operating system abstractions to manage GPUs as compute devices}},
@@ -43,11 +118,9 @@ howpublished = {\url{http://www.nvidia.com/content/PDF/fermi_white_papers/NVIDIA
 
 @misc{CUDA,
 author = {NVIDIA},
-title = {{CUDA C Programming Guide}},
-howpublished = {\url{http://developer.nvidia.com/nvidia-gpu-computing-documentation}},
+title = {{CUDA C Programming Guide Version 4.2}},
+year = {2012}
 }
-
-
 
 
 
@@ -110,11 +183,22 @@ pages = {73--82},
 year = {2009}
 }
 
-@inproceedings{Elliott10,
+@inproceedings{Elliott_ECRTS12,
 author = {G. Elliott and J. Anderson},
-title = {{Real-Time Multiprocessor Systems with GPUs}},
-booktitle = {Proceedings of the International Confrence on Real-Time and Network Systems},
-year = {2010}
+title = {{Robust Real-Time Multiprocessor Interrupt Handling Motivated by GPUs}}, 
+booktitle = {Proc. of the Euromicro Conference on Real-Time Systems},
+pages = {267--276},
+year = {2012}
+}
+
+@article{Elliott_RTS12,
+author = {G. Elliott and J. Anderson},
+title = {{Globally Scheduled Real-Time Multiprocessor Systems with GPUs}},
+journal = {Real-Time Systems},
+volume = {48},
+number = {1},
+pages = {34--74},
+year = {2012}
 }
 
 @inproceedings{Gharaibeh10,
@@ -221,10 +305,10 @@ pages = {46-–61},
 year = {1973}
 }
 
-@misc{Mellanox,
+@misc{GPUDirect,
 author = {Mellanox},
 title = {{NVIDIA GPUDirect Technology-- Accelerating GPU-based Systems (Whitepaper)}},
-howpublished = {\url{http://www.mellanox.com/pdf/whitepapers/TB_GPU_Direct.pdf}}
+year = {2010}
 }
 
 @misc{Mesa3D,
