added case study (not completed yet)

--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -28,6 +28,11 @@
 
 \documentclass{sig-alternate-ipsn13}
 
+\newcommand{\hd}{\emph{H+D}}
+\newcommand{\hp}{\emph{Hpin}}
+\newcommand{\dm}{\emph{Dmap}}
+\newcommand{\dmh}{\emph{DmapH}}
+
 %-----------------------------------------
 % need for camera-ready
 \pagestyle{empty}
@@ -113,6 +118,8 @@ Zero-Copy I/O Processing for Real-Time GPU Applications
 \keywords{GPGPU, Zero-Copy I/O, Plasma Fusion}
 
 \input{introduction.tex}
+\input{case_study.tex}
+\input{benchmarking.tex}
 
 \bibliographystyle{abbrv}
 \bibliography{references}
