--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -42,7 +42,8 @@
 \begin{document}
 
 \title{
-Zero-Copy I/O Processing for Real-Time GPU Applications
+%Zero-Copy I/O Processing for Low-Latency GPU Computing
+Zero-Copy I/O for Low-Latency GPU Computing
 }
 %
 % You need the command \numberofauthors to handle the 'placement
