--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -116,9 +116,10 @@ Zero-Copy I/O for Low-Latency GPU Computing
 \thispagestyle{empty}
 
 \input{abstract.tex}
-\keywords{GPGPU, Zero-Copy I/O, Plasma Fusion}
+%\keywords{GPGPU, Zero-Copy I/O, Fusion and Plasma, CPS}
 
 \input{introduction.tex}
+\input{system_model.tex}
 \input{case_study.tex}
 \input{benchmarking.tex}
 
