--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -120,6 +120,7 @@ Zero-Copy I/O for Low-Latency GPU Computing
 
 \input{introduction.tex}
 \input{system_model.tex}
+\input{io_processing.tex}
 \input{case_study.tex}
 \input{benchmarking.tex}
 
