--- a/draft/introduction.tex
+++ b/draft/introduction.tex
@@ -85,3 +85,5 @@ state-of-the-art GPU computing technology.
 The rest of this paper is organized as follows.
 Section~\ref{sec:system_model} describes the system model and
 assumptions behind this paper.
+Section~\ref{sec:io_processing} presents our zero-copy I/O processing
+scheme, and differentiates it from the exisiting schemes.
