added figures, and io_processing.tex (not completed yet)

--- a/draft/introduction.tex
+++ b/draft/introduction.tex
@@ -45,8 +45,8 @@ This is a signficant problem not only for plasma control but also for
 any applications of CPS that are augmented with compute devices.
 
 In order to utilize the GPU for applications of CPS, the system is
-required to support a method of bypassing data transfer between the GPU
-and the CPU, instead connecting the GPU and I/O devices directly.
+required to support a method of bypassing data transfer between the CPU
+and the GPU, instead connecting the GPU and I/O devices directly.
 To the best of our knowledge, however, there is currently no generic
 systems support for such a direct data transfer machanism except for
 specialized commercial products for the InfiniBand
