--- a/draft/system_model.tex
+++ b/draft/system_model.tex
@@ -24,7 +24,7 @@ Both of the memory types must be mappable to the PCIe bus.
 
 The control algorithm is parallelized and offloaded to the GPU.
 We specifically use CUDA to implement the algorithm, but any programming
-language for the GPU is available in our system model, because the
+language for the GPU is available under our model, because the
 application programming interface (API) considered in this paper does
 not depend on a specific programming language.
 All input data come from the sensor modules, while all output data go to
